make fetching updates.img optional
also make three tasks into one for installing the package dependencies

 - https://github.com/CSC-IT-Center-for-Science/ansible-role-pxe_bootstrap/issues/9

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,3 +2,8 @@
 # defaults file for ansible-role-pxe_bootstrap
 
 repo_location: "http://www.nic.funet.fi/pub/mirrors/centos.org/7/os/x86_64/"
+pxe_bootstrap_packages:
+ - httpd
+ - xinetd
+ - tftp-server
+pxe_bootstrap_upgrade_img: False
