--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -1,7 +1,7 @@
 ---
 - name: install package dependencies
   package: name="{{ item }}" state=present
-  with_items: pxe_bootstrap_packages
+  with_items: "{{ pxe_bootstrap_packages }}"
 
 - name: configure_tftp
   lineinfile: dest=/etc/xinetd.d/tftp regexp="disable" line="        disable                 = no"
