--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -6,17 +6,11 @@
 - name: configure_tftp
   lineinfile: dest=/etc/xinetd.d/tftp regexp="disable" line="        disable                 = no"
 
-- name: copy undionly.kkpxe chainboot
-  copy: src=undionly.kkpxe dest=/var/lib/tftpboot/undionly.kkpxe owner=root group=root mode="0644"
-
 - name: copy undionly.kpxe chainboot
   copy: src=undionly.kpxe dest=/var/lib/tftpboot/undionly.kpxe owner=root group=root mode="0644"
 
-- name: copy_uefi_chainboot
+- name: copy ipxe.efi (UEFI 64-bit) chainboot
   copy: src=ipxe.efi dest=/var/lib/tftpboot/ipxe.efi owner=root group=root mode="0644"
-
-- name: copy ipxe.pxe chainboot
-  copy: src=ipxe.pxe dest=/var/lib/tftpboot/ipxe.pxe owner=root group=root mode="0644"
 
 - name: install selinux package
   package: name="policycoreutils" state=present
