--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -9,8 +9,8 @@
 - name: copy undionly.kpxe chainboot
   copy: src=undionly.kpxe dest=/var/lib/tftpboot/undionly.kpxe owner=root group=root mode="0644"
 
-- name: copy ipxe.efi (UEFI 64-bit) chainboot
-  copy: src=ipxe.efi dest=/var/lib/tftpboot/ipxe.efi owner=root group=root mode="0644"
+- name: copy snponly.efi (UEFI 64-bit) chainboot
+  copy: src=snponlt.efi dest=/var/lib/tftpboot/snponly.efi owner=root group=root mode="0644"
 
 - name: install selinux package
   package: name="policycoreutils" state=present
